<resources>
    <string name="app_name">MobilnaKasa</string>
    <string name="hello">Hello!</string>
    <string name="chooseOperator">Choose operator</string>
    <string name="prompt_email">Email</string>
    <string name="home_cash_register">Cash register</string>
    <string name="home_scan">Scan</string>
    <string name="home_raports">Raports</string>
    <string name="home_employees">Employees</string>
    <string name="home_products">Products</string>
    <string name="home_receipts">Receipts</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_as">Sign in as</string>
    <string name="action_logout">Log out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="prompt_confirm">Are you sure?</string>
    <string name="prompt_yes">Yes</string>
    <string name="prompt_no">No</string>
    <string name="action_exit">Exit</string>
    <string name="new_product">New product</string>
    <string name="cash_register_sum">Sum:</string>
    <string name="action_revert">Revert</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="comma" translatable="false">,</string>
    <string name="code">CODE</string>
    <string name="X" translatable="false">X</string>
    <string name="price">PRICE</string>
    <string name="exit">EXIT</string>
    <string name="action_transaction_exit">Discard transaction</string>
    <string name="action_transaction_finish">Finish transaction and create receipt</string>
    <string name="action_add">Add</string>

</resources>
