<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CashRegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cashRegisterRecyclerView"
        android:layout_width="360dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/textCashRegisterSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/cash_register_sum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cashRegisterRecyclerView" />

    <TextView
        android:id="@+id/textCashRegisterSumResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/textCashRegisterSum"
        app:layout_constraintTop_toBottomOf="@+id/cashRegisterRecyclerView" />

    <Button
        android:id="@+id/button_num0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:text="0"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_num1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:text="1"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_num0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_num2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="2"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="571dp" />

    <Button
        android:id="@+id/button_num3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="3"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="571dp" />

    <Button
        android:id="@+id/button_num4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="4"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="501dp" />

    <Button
        android:id="@+id/button_num5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="5"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="501dp" />

    <Button
        android:id="@+id/button_numscan"
        android:layout_width="90dp"
        android:layout_height="202dp"
        android:drawableTop="@drawable/barcode"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:text="@string/home_scan"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/button_num6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="6"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="501dp" />

    <Button
        android:id="@+id/button_num7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="7"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/button_num8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="8"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/button_num9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="9"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/button_numcomma"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text=","
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="643dp" />

    <Button
        android:id="@+id/button_numok"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@android:string/ok"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="643dp" />

    <Button
        android:id="@+id/button_numx"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="X"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="571dp" />

    <Button
        android:id="@+id/button_numkod"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="KOD"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="501dp" />

    <Button
        android:id="@+id/button_numexit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/action_exit"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="430dp" />

    <ImageButton
        android:id="@+id/button_numreturn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/arrow_back"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="643dp" />

</androidx.constraintlayout.widget.ConstraintLayout>